# programming-puzzles

./: .gitignore  2016 S4  signup
C++/: CMakeLists.txt  fibonacci.cpp
C++/Archive/: combining_riceballs.cpp  reptivitiy (WIP).cpp
C++/CCC/: .#ccc.cpp  ccc  ccc.cpp  makefile
C++/CCCQT/: CMakeLists.txt  main.cpp
C++/CLion/DMOJ/: CMakeLists.txt  run.template  task.template
C++/DMOJ/: CMakeLists.txt  alice_through_the_looking_glass.cpp  input.txt  maximum_strategic_savings.cpp  nailed_it.cpp  pennies_in_the_ring.cpp  pyramid_message_scheme.cpp  raider.cpp  robothieves.cpp  submission.template  task.template  text.cpp
C++/DMOJ-CLION/: CMakeLists.txt  main.cpp
C++/DMOJ-Editors/: ccc11s4.cpp
C++/DMOJ-Editors/ccc03s4/: ccc03s4.01.oac  ccc03s4.04.oac  ccc03s4.05.oac  ccc03s4.06.inp  ccc03s4.06.oac  ccc03s4.06.out  ccc03s4.cpp
C++/DMOJ-Editors/gfssoc1s3/: gfssoc1s3.01.inp  gfssoc1s3.02.inp  gfssoc1s3.cpp
C++/DMOJ-QtCreator/: CMakeLists.txt  main.cpp
C++/DMOJ/output/: main.cpp
C++/DMOJ/tasks/: CCC16S3.cpp  ds1.cpp
C++/DMPG 2018/: CMakeLists.txt  main.cpp
C++/Project Euler/: makefile  problems  problems.cpp
C++/build-CCC-Desktop-Default/: CCC  CCC.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
C++/build-CCCQT-Desktop-Default/: CCCQT  CCCQT.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
C++/build-DMOJ-QtCreator-Desktop_Qt_5_10_1_MinGW_32bit-Default/: CMakeCache.txt  DMOJ-QtCreator.cbp  Makefile  cmake_install.cmake
C++/build-DMPG 2018-Desktop-Default/: CMakeCache.txt  DMPG_2018.cbp  Makefile  cmake_install.cmake  input.txt
CCC/: main.cpp  (+1 more)
(+400 files in other folders)
