cmake_minimum_required(VERSION 3.10)
project(C__)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__
        QTcreator/build-DMOJ-Default/DMOJ_autogen/mocs_compilation.cpp
        QTcreator/build-DMOJ-Default/cmake_install.cmake
        QTcreator/build-DMOJ-Default/CMakeCache.txt
        QTcreator/build-DMOJ-Default/DMOJ.cbp
        QTcreator/build-DMOJ-Default/DMOJ.exe
        QTcreator/build-DMOJ-Default/input.txt
        QTcreator/build-DMOJ-Default/Makefile
        QTcreator/DMOJ/.kdev4/DMOJ.kdev4
        QTcreator/DMOJ/.gitignore
        QTcreator/DMOJ/CMakeLists.txt
        QTcreator/DMOJ/CMakeLists.txt.user
        QTcreator/DMOJ/completed.cpp
        QTcreator/DMOJ/DMOJ.kdev4
        QTcreator/DMOJ/main.cpp
        QTcreator/DMOJ/wip.cpp)
